--- a/composer.json
+++ b/composer.json
@@ -20,14 +20,10 @@
     "require": {
         "php": ">=5.4.0",
         "yiisoft/yii2": "^2.0.13",
-        "yiisoft/yii2-swiftmailer": "^2.0.0",
-        "yiisoft/yii2-authclient": "^2.1.0",
-        "yiisoft/yii2-bootstrap": "^2.0.0"
+    "yiisoft/yii2-authclient": "^2.1.0"
     },
     "require-dev": {
-        "yiisoft/yii2-codeception": "^2.0.0",
-        "codeception/specify": "^0.4.3",
-        "codeception/verify": "^0.3.1"
+        "yiisoft/yii2-codeception": "^2.0.0"
     },
     "autoload": {
         "psr-4": {
